--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,3 +1,401 @@
+
+<div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
+
+<div id="particle-canvas"></div>
+<div class="navbar-fixed-top" style=" width: 90px;  padding: 10px; margin-top: -10px; margin-left: 30px; font-size: 0.5em; background-color: #123033cc">
+   <a href="#tickets" class="smooth-goto"><h2>tickets kaufen</h2></a>
+</div>
+
+<!-- Header -->
+<section id="header">
+				<header>
+
+					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+ viewBox="0 0 300.5 1868.9" enable-background="new 0 0 300.5 1868.9" xml:space="preserve">
+<g>
+<path fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" d="M151.8,9.5l63.7,106.9h-38.3
+	c0,0-15.3,2.7-15.7,20.8c-0.2,12.7-1.3,456.7-1.3,456.7l-10-8.7l-10.5,8.7v-454c0,0,0.1-22.7-16.2-22.7c-16.1,0-40.7,0.2-40.7,0.2
+	L151.8,9.5z"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="110.1" y1="212.9" x2="110.1" y2="398.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="191.1" y1="212.9" x2="191.1" y2="398.9"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="432.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="432.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="463.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="463.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="495.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="495.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="526.5" r="8"/>
+<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="526.5" r="8"/>
+<polygon fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" points="150.1,598.5 112.8,636.2 125.1,649.2
+	150.1,623.9 175.1,649.2 188,637.1 	"/>
+<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="648.9" x2="150.1" y2="704.9"/>
+<circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="754.1" r="26.3"/>
+<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="113.1" y1="805.9" x2="113.1" y2="861.9"/>
+<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="185.1" y1="806.9" x2="185.1" y2="862.9"/>
+<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="805.9" x2="150.1" y2="890.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="59.1" y1="1046.9" x2="59.1" y2="1232.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="239.1" y1="1046.9" x2="239.1" y2="1232.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="109.1" y1="1167.9" x2="109.1" y2="1353.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="190.1" y1="1167.9" x2="190.1" y2="1353.9"/>
+<polygon fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" points="150.3,901.9 38.1,1010.9 140.1,1010.9
+	139.9,1048.9 94.1,1048.9 93.8,1066.9 140.1,1066.9 139.9,1096.9 94.1,1096.9 93.9,1114.9 140.1,1114.9 139.9,1406.9 7.1,1538.4
+	19.3,1551.1 138.1,1435.9 138.1,1476.9 6.1,1608.9 17.8,1621.9 138.1,1505.9 138.1,1540.9 6.1,1669.9 17.8,1681.9 138.1,1566.9
+	138.1,1605.9 6.1,1738.9 17.8,1750.9 138.1,1636.9 138.1,1770.9 159.1,1770.9 159.1,1634.9 274.1,1750.9 288.6,1737.9
+	157.1,1606.9 157.1,1566.9 275.1,1683.9 290.9,1667.4 156.1,1533.4 156.1,1499.9 278.1,1620.9 291.9,1606.8 156.1,1471.3
+	156.1,1431.9 274.1,1548.9 287.1,1535.4 156.1,1404.9 156.1,1115.9 204.1,1115.9 204.1,1097.9 160.1,1097.9 160.1,1065.9
+	203.1,1065.9 203.1,1048.9 159.1,1048.9 159.1,1009.9 263.1,1009.9 	"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1844.9" x2="179.1" y2="1844.9"/>
+<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1863.9" x2="179.1" y2="1863.9"/>
+<circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="1796.4" r="27.5"/>
+</g>
+</svg>
+
+					<img style="width: 80%" src="../../assets/images/logo.svg">
+				</header>
+				<footer>
+					<a href="#banner" class="button style2 scrolly-middle">Willkommen</a>
+				</footer>
+</section>
+
+
+<!-- Banner -->
+<section id="banner2">
+  <header>
+    <h2>Mindset</h2>
+  </header>
+  <div class="weare">
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor <br>
+      invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.<br>
+      At vero eos et accusam et justo duo dolore</p>
+  </div>
+  <footer>
+    <a href="#first" class="button style2 scrolly">Act on this message</a>
+  </footer>
+</section>
+
+
+<div class="container2 center-block">
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+</div>
+
+
+
+<!-- Feature 1 -->
+  <article id="first" class="container box style1 right">
+    <a href="#" class="image fit"><img src="../../assets/images/pic01.jpg" alt="" /></a>
+    <div class="inner">
+      <header>
+        <h2>31.12.17<br />
+        Silversterzauber</h2>
+
+      </header>
+      <p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+    </div>
+  </article>
+
+<!-- Feature 2 -->
+  <article class="container box style1 left">
+    <a href="#" class="image fit"><img src="../../assets/images/pic02.jpg" alt="" /></a>
+    <div class="inner">
+      <header>
+        <h2>19,20.04.19<br />
+        Klang Heimlich uf em Berg
+        </h2>
+      </header>
+      <p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+    </div>
+  </article>
+  <div class="style3" style="padding-bottom: 50px"></div>
+
+  <!-- Portfolio -->
+  <section id="banner" class=" style2" style="margin-top: 60px">
+			<article class="container ">
+				<header>
+					<h2>Gallerie</h2>
+					<p>Justo phasellus et aenean dignissim<br />
+					placerat cubilia purus lectus.</p>
+				</header>
+				<div class="inner gallery">
+					<div class="row 0%">
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/01.jpg" class="image fit"><img src="../../assets/images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/02.jpg" class="image fit"><img src="../../assets/images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/03.jpg" class="image fit"><img src="../../assets/images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/04.jpg" class="image fit"><img src="../../assets/images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+					</div>
+					<div class="row 0%">
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/05.jpg" class="image fit"><img src="../../assets/images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/06.jpg" class="image fit"><img src="../../assets/images/thumbs/06.jpg" alt="" title="Different." /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/07.jpg" class="image fit"><img src="../../assets/images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/08.jpg" class="image fit"><img src="../../assets/images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+					</div>
+				</div>
+			</article>
+  </section>
+
+  <!-- Contact -->
+
+
+  <div class="container2 center-block">
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+  </div>
+
+
+
+  <!-- Generic -->
+  <article class="container box style3">
+
+        <header>
+
+        </header>
+				<h2>Artists</h2>
+        <div style="margin-top: 30px; margin-bottom: 70px"></div>
+
+			  <section>
+
+    			  <h2 style="text-align: left">Dani Posada</h2>
+    				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+    				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+    				facilisis leo magna.</p>
+    				<hr/>
+            <h2 style="text-align: left">Ruben Coslada</h2>
+    				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+    				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+    				facilisis leo magna.</p>
+
+    				<h2 style="text-align: left">Ruben Coslada2</h2>
+    				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+    				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+    				facilisis leo magna.</p>
+
+			 </section>
+
+      <section>
+				<header>
+
+				</header>
+				<div class="table-wrapper">
+					<table class="default">
+						<thead>
+
+						</thead>
+						<tbody>
+							<tr>
+
+								<td>Dani Posada</td>
+								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+								<td colspan="3">Link</td>
+							</tr>
+							<tr>
+
+								<td>Ruben Coslada</td>
+								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+								<td colspan="3">Link</td>
+							</tr>
+							<tr>
+
+								<td>Dani Posada</td>
+								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+								<td colspan="3">Link</td>
+							</tr>
+							<tr>
+
+								<td>Ruben Coslada</td>
+								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+								<td colspan="3">Link</td>
+							</tr>
+						</tbody>
+
+					</table>
+				</div>
+			</section>
+
+  </article>
+
+  <div class="container2 center-block">
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+  </div>
+
+
+<div style="margin-bottom: -70px" class="box style3">
+    <header >
+			<h2>Music</h2>
+    </header>
+</div>
+
+
+<div class="player">
+  <div class="container ">
+	<br/>
+	<br/>
+	<div class="row">
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a style=" line-height: 10px;" href="https://soundcloud.com/dani_posada/posada-klaus-23-april-2016" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/ruben-coslada/de-posada-b2b-ruben-coslada-hive-17162017" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/le-n-ko/gingin1" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/le-n-ko/102-102a" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/le-n-ko/nappe-a-classer" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/le-n-ko/cordeler" class="sc-player"></a>
+		</div>
+		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<a href="https://soundcloud.com/le-n-ko/yung-simmie-be-cool-nko-mod" class="sc-player"></a>
+		</div>
+	</div>
+  </div>
+	<div class="clear"></div>
+</div>
+
+
+
+<div id="tickets">
+	<section id="banner2" class=" style2" style="margin-top: 60px">
+		<section>
+		  <header>
+		  	<h2 style="font-size: 5em; margin-bottom: 90px">Tikets kaufen</h2>
+		  </header>
+		  <div class="container ">
+		      <div class="row">
+		          <div class="col-lg-12">
+								<form method="post" action="#">
+									<div class="row">
+										<div class="12u">
+											<ul class="actions">
+												<li><input type="submit" value="login" /></li>
+												<li><input type="submit" value="Register" /></li>
+											</ul>
+										</div>
+									</div>
+								</form>
+		          </div>
+		      </div>
+		   </div>
+		 </section>
+	</section>
+</div>
+
+<section id="banner2" class=" style2" style="margin-top: 60px">
+
+  <section id="banner2" class=" style2" style="margin-top: 60px">
+  <section>
+      <header>
+      	<h2 >Tikets kaufen</h2>
+      	<h2 style="font-size: 5em;">Login</h2>
+     	</header>
+    	<div class="container">
+  				<form method="post" action="#">
+  						<div class="row"  >
+  						   <div class="col-lg-3 " ></div>
+                              <div class="col-lg-6" >
+  								<input class="text" type="text" name="name" id="name" value="" placeholder="Email" /></div>
+                              <div class="col-lg-3 " ></div>
+                              </div>
+                          <div class="row"  >
+                          <div class="col-lg-3 " ></div>
+  							<div class="col-lg-6">
+  								<input class="text" type="text" name="email" id="email" value="" placeholder="Password" /></div>
+                              <div class="col-lg-3 " ></div>
+  						</div>
+
+
+  						<div class="row">
+  							<div class="col-lg-12">
+  								<ul class="actions">
+  									<li><input type="submit" value="Submit" /></li>
+  									<li><input type="reset" class="style3" value="Clear Form" /></li>
+  								</ul>
+  							</div>
+  						</div>
+  					</form>
+
+
+        </div>
+  </section>
+  </section>
+
+
+
+
+  <section id="banner2" class=" style2" style="margin-top: 60px">
+  <section>
+      <header>
+          <h2 >Tikets kaufen</h2>
+       <h2 style="font-size: 5em;">Register</h2>
+     </header>
+    <div class="container ">
+        <div class="row">
+            <div class="col-lg-12">
+
+  					<form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+  						<div class="row">
+  							<div class="6u">
+  								<input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
+  							</div>
+  							<div class="6u">
+  								<input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
+  							</div>
+                <div class="6u">
+  								<input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
+  							</div>
+  							<div class="6u">
+  								<input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
+  							</div>
+                <div class="6u">
+  								<input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt form-control text-line" required>
+  							</div>
+  							<div class="6u">
+  								<input type="password" placeholder="Passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
+  							</div>
+
+                <!--
+                <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
+                <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
+                -->
+
+              </div>
+
+
+  						<div class="row">
+  							<div class="12u">
+  								<ul class="actions">
+  									<li><button type="submit" class="basic-btn">Send</button></li>
+  									<li><input type="reset" class="style3" value="Clear Form" /></li>
+  								</ul>
+  							</div>
+  						</div>
+
+  					</form>
+
+
+
+            </div>
+          </div>
+        </div>
+  </section>
+  </section>
+
+
+
+
+
+
+<!--
 <div class="signup-wrapper">
     <div class="form-container">
 
@@ -31,3 +429,4 @@
 
     </div>
 </div>
+-->
