--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-image: url('assets/images/background_2.jpg');
-    font-family: 'Helvetica', 'Arial', sans-serif;
+    background-color: #183026;
+    background-image: url('assets/images/bg.jpg');
+    background-repeat: repeat, no-repeat;
+		background-size: auto, cover;
+		background-position: top left, center 0;
+		background-attachment: fixed, fixed;
+    font-family: 'Roboto Condensed', sans-serif;
+		font-size: 18pt;
+		line-height: 1.75em;
+		font-weight: 100;
+		letter-spacing: 1px;
+		color: #3a3939;
+		text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
+		-webkit-text-stroke: 0.25px;
 }
 
 .form-container {
