--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,7 +10,7 @@
 
 <!-- Header -->
 <section id="header">
-				<header>
+<header>
 
 
 <!--
@@ -277,16 +277,16 @@
 		  <div class="container ">
 		      <div class="row">
 		          <div class="col-lg-12">
-								<form method="post" action="#">
-									<div class="row">
-										<div class="12u">
-											<ul class="actions">
-												<li><a href="#login" class="button scrolly-middle">login</a></li>
-												<li><a href="#register" class="button scrolly-middle">register</a></li>
-											</ul>
-										</div>
-									</div>
-								</form>
+    					<form method="post" action="#">
+    						<div class="row">
+    							<div class="12u">
+    								<ul class="actions">
+    									<li><a href="#login" class="button scrolly-middle">login</a></li>
+    									<li><a href="#register" class="button scrolly-middle">register</a></li>
+    								</ul>
+    							</div>
+    						</div>
+    					</form>
 		          </div>
 		      </div>
 		   </div>
@@ -303,23 +303,29 @@
       	<h2 style="font-size: 5em;">Login</h2>
      	</header>
 
-      <div class="container">
-  				<form #formData='ngForm' class="loginForm" (ngSubmit)="onSubmitLogin(formData)">
-  	         <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
-						 <input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt" required>
+          <div class="container">
+      			<form #formData='ngForm' class="loginForm" (ngSubmit)="onSubmitLogin(formData)">
+          	         <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
+        			 <input type="password" placeholder="passwort" (ngModel)="email" name="email" class="txt" required>
 
-             <br />
-						 <div class="row">
-						   <div class="col-lg-12">
-								<ul class="actions">
-									<li><input type="submit" value="Submit" /></li>
-									<li><input type="reset" class="style3" value="Clear Form" /></li>
-								</ul>
-							</div>
-						</div>
+                     <br />
 
-          </form>
-        </div>
+                     <div class="10u">
+                         <span class="error" *ngIf="errorLogin" [@fallIn]='state'>{{ errorLogin }}</span>
+                     </div>
+
+
+    				 <div class="row">
+    				   <div class="col-lg-12">
+    						<ul class="actions">
+    							<li><input type="submit" value="Submit" /></li>
+    							<li><input type="reset" class="style3" value="Clear Form" /></li>
+    						</ul>
+    					</div>
+    				</div>
+
+              </form>
+            </div>
 
       </section>
   </section>
@@ -344,28 +350,32 @@
   							<div class="6u">
   								<input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
   							</div>
-                <div class="6u">
+                            <div class="6u">
   								<input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
   							</div>
   							<div class="6u">
   								<input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
   							</div>
-                <div class="6u">
+                            <div class="6u">
   								<input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt form-control text-line" required>
   							</div>
   							<div class="6u">
   								<input type="password" placeholder="Passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
   							</div>
 
-                <div class="6u abg-checkbox">
-                  <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
-                  <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
-                </div>
+                            <div class="6u abg-checkbox">
+                              <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
+                              <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
+                            </div>
 
-              </div>
+                        </div>
+
+                        <div class="10u">
+                            <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
+                        </div>
 
 
-              <div class="row">
+                        <div class="row">
  						   <div class="col-lg-12">
  								<ul class="actions">
  									<li><input type="submit" value="Submit" /></li>
@@ -373,13 +383,7 @@
  								</ul>
  							</div>
  						</div>
-
-
-
   					</form>
-
-
-
             </div>
           </div>
         </div>
