--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -254,110 +254,11 @@
 				</header>
 
 
-        <div class="divTable">
-        	<div class="divTableBody">
-        		<div class="divTableRow">
-        			<div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/andreasramos.jpg" /></div>
-        			<div class="divTableCell">Andreas Ramos</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/andreasramosmusic/" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/areage.jpg" /></div>
-        			<div class="divTableCell">Are:Age</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/are.age.live/" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/bernstein.jpg" /></div>
-        			<div class="divTableCell">Bernstein</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/bernsteinmusik/" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/burtcobain.jpg" /></div>
-        			<div class="divTableCell">Burt Cobain</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/Burt-Cobain-1622359221367259/" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/ismailclive.jpg" /></div>
-        			<div class="divTableCell">Ismail & Clive</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/Ismailundclive/" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/jb.jpg" /></div>
-        			<div class="divTableCell">Juen & Bach</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/JuenBach" target="_blank"> LINK </a> </div>
-        		</div>
-        		<div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/kalabrese.jpg" /></div>
-        			<div class="divTableCell">Kalabrese</div>
-        			<div class="divTableCell"><a href="https://www.facebook.com/kalabrese" target="_blank"> LINK </a> </div>
-        		</div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/lucagerosa.jpg" /></div>
-              <div class="divTableCell">Luca Gerosa</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/che.rossa" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/matija.jpg" /></div>
-              <div class="divTableCell">Matija</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/djmatija/" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/milo.jpg" /></div>
-              <div class="divTableCell">Milo Häfliger</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/milo.hafliger" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/natch.jpg" /></div>
-              <div class="divTableCell">Natch</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/natchporres" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicifaerber.jpg" /></div>
-              <div class="divTableCell">Nici Faerber</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/nici.faerber" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicosun.jpg" /></div>
-              <div class="divTableCell">Nico Sun</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/nicsonne/" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/pasci.jpg" /></div>
-              <div class="divTableCell">Pasci</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/dj.pasci/" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rubencoslada.jpg" /></div>
-              <div class="divTableCell">Ruben Coslada</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/rubencosladamusic/" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rumlaut.jpg" /></div>
-              <div class="divTableCell">Rumlaut</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/rumlaut/" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/smalltown.jpg" /></div>
-              <div class="divTableCell">Smalltown Collective</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/SmalltownCollective" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/temosayin.jpg" /></div>
-              <div class="divTableCell">Temo Sayin</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/temo.sayin" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/timoteo.jpg" /></div>
-              <div class="divTableCell">Timoteo</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/schickerio" target="_blank"> LINK </a> </div>
-            </div>
-            <div class="divTableRow">
-              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/working.jpg" /></div>
-              <div class="divTableCell">Workinprogress</div>
-              <div class="divTableCell"><a href="https://www.facebook.com/workinprogressZH/" target="_blank"> LINK </a> </div>
-            </div>
-        	</div>
-        </div>
+
+
+
+
+
         <!-- DivTable.com -->
 
 
@@ -371,42 +272,53 @@
     <div class="chevron"></div>
     <div class="chevron"></div>
     <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
   </div>
 
 
-<div class="box style3">
-    <header>
-			<h3>Music</h3>
-    </header>
+
+
+
+
+<div class="soundcloud-wrapper">
+  <div class="box style3">
+      <header>
+  			<h3>Music</h3>
+      </header>
+  </div>
+
+
+  <div class="player" style="display: inline-block">
+    <div class="container videos-container">
+  	<div class="row">
+  		<div class="col-xs-6">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+  		</div>
+  		<div class="col-xs-6">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+  		</div>
+  		<div class="col-xs-6">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+  		</div>
+  		<div class="col-xs-6">
+  	      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+  		</div>
+  		<div class="col-xs-6">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+  		</div>
+  		<div class="col-xs-6">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+  		</div>
+    </div>
+    </div>
+  	<div class="clear"></div>
+  </div>
 </div>
-
-
-<div class="player">
-  <div class="container videos-container">
-	<div class="row">
-		<div class="col-xs-6">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-		</div>
-		<div class="col-xs-6">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</div>
-		<div class="col-xs-6">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</div>
-		<div class="col-xs-6">
-	      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</div>
-		<div class="col-xs-6">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</div>
-		<div class="col-xs-6">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</div>
-  </div>
-  </div>
-	<div class="clear"></div>
-</div>
-
 
 
 <div id="tickets">
